[gd_scene load_steps=5 format=3 uid="uid://duhtrycjv3g1o"]

[ext_resource type="Script" path="res://Scenes/ScoreScreen/ScoreScreenScript.gd" id="1_dnt1q"]
[ext_resource type="FontFile" uid="uid://cja6vbwfj20uq" path="res://customfont.pfb" id="1_sqnh2"]
[ext_resource type="Texture2D" uid="uid://b03relo6kfc6g" path="res://Scenes/ScoreScreen/score background.png" id="2_ml5dd"]

[sub_resource type="LabelSettings" id="LabelSettings_b78my"]
font_size = 30

[node name="ScoreScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dnt1q")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ml5dd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 140.0
offset_top = 210.0
offset_right = 566.0
offset_bottom = 13.0
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="DateLabel1" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sqnh2")
text = "2024/05/06"
label_settings = SubResource("LabelSettings_b78my")

[node name="DateLabel2" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sqnh2")
text = "2024/05/06"
label_settings = SubResource("LabelSettings_b78my")

[node name="DateLabel3" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sqnh2")
text = "2024/05/06"
label_settings = SubResource("LabelSettings_b78my")

[node name="DateLabel4" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sqnh2")
text = "2024/05/06"
label_settings = SubResource("LabelSettings_b78my")

[node name="DateLabel5" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sqnh2")
text = "2024/05/06"
label_settings = SubResource("LabelSettings_b78my")

[node name="DateLabel6" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sqnh2")
text = "2024/05/06"
label_settings = SubResource("LabelSettings_b78my")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -454.0
offset_top = 210.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ScoreLabel1" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sqnh2")
text = "200000"
label_settings = SubResource("LabelSettings_b78my")

[node name="ScoreLabel2" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sqnh2")
text = "200"
label_settings = SubResource("LabelSettings_b78my")

[node name="ScoreLabel3" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sqnh2")
text = "200"
label_settings = SubResource("LabelSettings_b78my")

[node name="ScoreLabel4" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sqnh2")
text = "200"
label_settings = SubResource("LabelSettings_b78my")

[node name="ScoreLabel5" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sqnh2")
text = "200"
label_settings = SubResource("LabelSettings_b78my")

[node name="ScoreLabel6" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sqnh2")
text = "200"
label_settings = SubResource("LabelSettings_b78my")
